feat: adding bignumber project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       ],
       "big-currency/*": [
         "dist/big-currency/*"
+      ],
+      "bignumber-currency": [
+        "dist/bignumber-currency"
+      ],
+      "bignumber-currency/*": [
+        "dist/bignumber-currency/*"
       ]
     }
   }
